[metadata]
name = ray-rate-limiter
version = 0.0.1
author = David Höppner
author_email = david@argodis.de
description = An Ray actor that can be used as a rate limiter 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xffea/ray-rate-limiter
project_urls =
    Bug Tracker = https://github.com/0xffea/ray-rate-limiter/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
